[package]
name = "geode"
version = "3.4.0"
authors = [
    "HJfod <dreadrollmusic@gmail.com>",
    "camila314 <ilaca314@gmail.com>",
    "matcool",
    "ConfiG <cgytrus@cgyt.ru>",
]
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
clap_complete = "4.5.44"
clap_mangen = "0.2.26"
colored = "3.0.0"
dirs = "6.0.0"
fontdue = "0.9.2"
git2 = "0.20.0"
glob = "0.3.2"
image = "0.25.5"
imageproc = "0.25.0"
signed-distance-field = "0.6.3"
path-absolutize = "3.1.1"
plist = "1.7.0"
rustyline = "15.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
sha256 = "1.5.0"
texture_packer = "0.29.0"
walkdir = "2.5.0"
zip = "2.2.2"
semver = "1.0.25"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
cfg-if = "1.0.0"
regex = "1.11.1"
sha3 = "0.11.0-pre.4"
hex = "0.4.3"
edit-distance = "2.1.3"
which = "7.0.2"
vec1 = { version = "1.12.1", features = ["serde"] }
crossterm_input = "0.5.0"
open = "5.3.2"
rand = "0.9.0"
tempfile = "3.16.0"
dialoguer = "0.11.0"

[target.'cfg(target_os = "android")'.dependencies]
terminal-clipboard = "0.4.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
cli-clipboard = "0.4.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
ansi_term = "0.12.1"

[build-dependencies]
winres = "0.1.12"
