[package]
name = "geode"
version = "3.7.0"
authors = [
    "HJfod <dreadrollmusic@gmail.com>",
    "Camila314 <ilaca314@gmail.com>",
    "matcool",
    "ConfiG <cgytrus@cgyt.ru>",
]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2.21"

colored = "3.0.0"
dirs = "6.0.0"
fontdue = "0.9.2"
git2 = "0.20.2"
glob = "0.3.1"
image = "0.25.1"
imageproc = "0.25.0"
path-absolutize = "3.1.1"
plist = "1.6.1"
rustyline = "17.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
sha256 = "1.5.0"
texture_packer = "0.30.0"
walkdir = "2.5.0"
zip = "4.6.0"
semver = "1.0.23"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
regex = "1.10.5"
edit-distance = "2.1.0"
vec1 = { version = "1.12.1", features = ["serde"] }
crossterm_input = "0.5.0"
open = "5.1.4"
rand = "0.9.2"
tempfile = "3"
dialoguer = "0.12.0"

[target.'cfg(target_os = "android")'.dependencies]
terminal-clipboard = "0.4.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
cli-clipboard = "0.4.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
ansi_term = "0.12"

[build-dependencies]
winres = "0.1.12"
