[package]
name = "geode-lib"
version = "0.1.0"
authors = ["HJfod <60038575+HJfod@users.noreply.github.com>", "Camila314 <ilaca314@gmail.com>"]
edition = "2018"

[lib]
name = "libgeode"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(windows)'.build-dependencies]
winres = "0.1" # for icon

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
winreg = "0.10"
windows = { version = "0.32.0", features = ["Win32_UI_Shell"] }
const_format = "0.2.13"

[dependencies]
colored = "2"
clap = { version = "3.0.12", features = ["derive"] }
path-absolutize = "3.0.11"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0.136", features = ["derive"] }
git2 = "0.13.25"
sha256 = "1.0.3"
texture_packer = "0.23.1"
walkdir = "2"
plist = "1.3.1"
image = "0.23.14"
zip = "0.5.13"
glob = "0.3.0"
libc = "0.2.0"
home = "0.5.3"
fontdue = "0.7.2"
imageproc = "0.22.0"
