[package]
name = "geode-utils"
version = "0.2.4"
authors = ["HJfod <60038575+HJfod@users.noreply.github.com>", "Camila314 <ilaca314@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "geodeutils"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(windows)'.build-dependencies]
winres = "0.1" # for icon

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
winreg = "0.10"
windows = { version = "0.32.0", features = ["Win32_UI_Shell"] }
const_format = "0.2.13"

[dependencies]
git2 = "0.13.25"
libc = "0.2.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
zip = "0.6.2"
bytes = "1.1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
